Adjusted tunings to increase AEC3 robustness against pipeline issues

Bug: chromium:810371,webrtc:8862
Change-Id: I2bfd3601c41caf608c21bec27133a175e3a7f2c5
Reviewed-on: https://webrtc-review.googlesource.com/49782
Reviewed-by: Gustaf Ullberg <gustaf@webrtc.org>
Commit-Queue: Per Åhgren <peah@webrtc.org>
Cr-Commit-Position: refs/heads/master@{#21958}